--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ button:focus {
     letter-spacing: 3px;
     font-size: 1rem;
     letter-spacing: 3px;
-    margin: 6% 2% 3% 2%;
+    margin: 8% 2% 3% 2%;
 }
 
 .reference>h6 {
@@ -234,7 +234,7 @@ button:focus {
     font-weight: 100;
     letter-spacing: 1px;
     font-size: .8rem;
-    margin: 0 0 6% 0;
+    margin: 0 0 8% 0;
 }
 
 /*  Divider 4   */
@@ -246,7 +246,32 @@ button:focus {
 
 /* ------------- Media inquiries/ Dividers  */
 
+@media only screen and (max-width: 768px) {
+    #quotation-four>h4 {
+        margin: 12% 0;
+    }
+}
+
 @media only screen and (min-width: 768px) {
+    .quotation>h4 {
+        font-size: 1.2rem;
+        letter-spacing: 3px;
+        margin: 5% 2% 1.5% 2%;
+    }
+
+    .reference>h6 {
+        font-size: .8rem;
+        margin: 0;
+        margin: 0 0 5% 0;
+    }
+
+    #quotation-four>h4 {
+        margin: 6% 0;
+        font-style: inherit;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
     .quotation>h4 {
         font-size: 1.5rem;
         letter-spacing: 3px;
@@ -258,8 +283,12 @@ button:focus {
         margin: 0;
         margin: 0 0 3% 0;
     }
-}
 
+    #quotation-four>h4 {
+        margin: 4% 0;
+        font-style: inherit;
+    }
+}
 /* ---------------------------------------------- Page Sections  */
 
 /* Section 1 --------------------------------  Actual (Home)    */
