scroll bar for the posters

--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,19 @@ button:focus {
     overflow: auto;
 }
 
+.actual-content {
+    overflow: -moz-scrollbars-none;
+}
+
+.actual-content {
+    -sms-overflow-style: none;
+}
+
+.actual-content::-webkit-scrollbar {
+    width: 1!important;
+}
+
+
 /* ------------- Keyframe / Actual (Home) content appearing at load  */
 
 @keyframes fadein {
