--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ button:focus {
 
 /* Divider  general  */
 .divider {
-    background-image: url(/assets/images/paperw.jpg);
+    background-image: url(../assets/images/paperw.jpg);
     box-shadow: -4px 2px 20px 7px #111111;
 }
 
