--- a/css/index.css
+++ b/css/index.css
@@ -110,6 +110,11 @@ header {
     -o-transition: ease-in-out 1s;
 }
 
+@media only screen and (max-width: 425px) {
+    .logo {
+        font-size: 1.6em;
+    }
+}
 /*--------------------------------- Entries  */
 .entry-container {
     background-color: transparent;
@@ -151,21 +156,6 @@ header {
     -o-transition: ease-in-out 1s;
 }
 
-/*#and-sign {
-    font-family: 'Julius Sans One', monospace;
-    text-decoration: none;
-    color: rgb(239, 147, 147);
-    font-weight: 200;
-    font-size: 3em;
-    padding-top: 0.3em;
-    margin: 0;
-    transition: ease-in-out 1s;
-    -webkit-transition: ease-in-out 1s;
-    -moz-transition: ease-in-out 1s;
-    -ms-transition: ease-in-out 1s;
-    -o-transition: ease-in-out 1s;
-}*/
-
 #entry-business {
     font-family: 'Julius Sans One', monospace;
     text-decoration: none;
@@ -185,7 +175,7 @@ header {
 /* Button Hover Zoom effect was taken from https://w3bits.com/css-image-hover-zoom/, with 
 cortesy to Rahul*/
 
-/*--------------------------------- Hover Zoom Effect */  */
+/*--------------------------------- Hover Zoom Effect */
 .business-container a {
     transition: transform .1s ease;
     -webkit-transition: transform .1s ease;
