--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ button:focus {
     z-index: -2;
 }
 
-@media screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
     .background-box {
         background-position: left 0;
     }
@@ -514,7 +514,7 @@ button:focus {
 
 
     .infoText {
-        font-size: .7rem;
+        font-size: .8rem;
     }
 
     .linkWrap {
@@ -624,12 +624,12 @@ button:focus {
         flex-flow: column;
         height: 100vh;
         width: 100vw;
-        animation: fadein 14s;
-        -webkit-animation: fadein 14s;
+        animation: fadein 10s;
+        -webkit-animation: fadein 10s;
         animation-timing-function: cubic-bezier(.165, .84, 44, 1);
         animation-delay: 0s;
         overflow: auto;
-    }
+}
 
     @keyframes fadein {
         from {
